--- a/css/main.css
+++ b/css/main.css
@@ -1,566 +1,325 @@
-@import url('https://fonts.googleapis.com/css?family=La+Belle+Aurore|Open+Sans');
-
-
-:root{
- --brightYellow:#E3B505;
- --darkBrown:#BB9457;
- --yellow:rgb(242, 180, 80); 
- --brown:#382923;
- --black:#191919;
- --grey:#A9B2AC;
+@import url("https://fonts.googleapis.com/css?family=Calligraffitti|Mali");
+/* GENERAL STYLES */
+:root {
+  --mainYellow: #fdbe02;
+  --mainWhite: #fff;
+  --mainBlack: #071013;
+  --mainGrey: #9b9999;
+  --TransGrey: rgba(0, 0, 0, 0.1);
 }
-
-*{
- margin: 0;
- padding: 0;
- box-sizing: border-box;
+body {
+  color: var(--mainBlack);
+  background: var(--mainWhite);
+  font-family: "Mali", cursive;
 }
-
-body{
-  font-family: 'Open Sans', sans-serif;
-  background: linear-gradient(rgba(255,255,255,0.85),rgba(255,255,255,0.85)),url('../img/bodyBcg.jpeg');
-  color: var(--black);
+.text-slanted {
+  font-family: "Calligraffitti", cursive;
 }
-/* global styles */
-.bell-fonts{
-  font-family: 'La Belle Aurore', cursive;
+.text-yellow {
+  color: var(--mainYellow);
 }
-/* section paddin */
-.section-padding{
-  padding: 3rem 0;
-}
-/* grid container */
-.grid-container{
-  max-width: 90vw;
-  margin: 2rem auto;
-  display:grid;
-  grid-row-gap: 2rem;
-}
-@media screen and (min-width:768px){
-  .grid-container--medium-2{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 4rem;
-  }
-  .grid-container{
-  max-width: 75vw;
-}
-}
-/* section */
-.section-title{
-  padding: 1rem 0.5rem;
-}
-.section-title--left{
-  margin-left: 10rem;
-}
-.section-title__name{
-  font-size: 3rem;
+.btn-yellow {
+  background: var(--mainYellow);
   text-transform: capitalize;
+  font-size: 1.2rem;
+  color: var(--mainBlack);
+  border-radius: 0 !important;
 }
-.section-title__underline{
-  background: var(--yellow);
-  width: 5rem;
-  height: 0.25rem;
+.btn-yellow:hover {
+  background: var(--mainBlack);
+  color: var(--mainYellow);
 }
-.section-title__text{
-  letter-spacing: 0.1rem;
-  line-height: 1.5;
-  margin-top: 1rem;
-  color: var(--grey);
+.btn-black {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  color: var(--mainBlack);
+  border-radius: 0 !important;
+  border: 0.1rem solid var(--mainBlack);
+}
+.btn-black:hover {
+  background: var(--mainBlack);
+  color: var(--mainWhite);
+}
+.banner-products,
+.banner-single-product,
+.banner-store {
+  min-height: 60vh;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("../img/pageBcg/productsBcg.jpeg") center/cover fixed no-repeat;
+}
+.banner-single-product {
+  min-height: 60vh;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("../img/pageBcg/singleBcg.jpeg") center/cover fixed no-repeat;
+}
+.banner-store {
+  min-height: 60vh;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.5),
+      rgba(255, 255, 255, 0.5)
+    ),
+    url("../img/pageBcg/storeBcg.jpeg") center/cover fixed no-repeat;
 }
 
-/* end of global styles */
-
-/* preloader */
-
-.preloader{
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: var(--brightYellow);
-  z-index: 999;
-  display: grid;
-  justify-content: center;
-  align-items: center;
+/* #######################HomePage############### */
+/* navbar */
+.navbar-toggler {
+  outline: none !important;
+  border: none;
+  font-size: 2.2rem;
+  color: var(--mainYellow) !important;
 }
-
-
-
-/* header */
-.header{
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 80%;
-  justify-content: center;
-  align-items: center;
+.nav-link {
+  font-size: 1.6rem;
+  border-bottom: 0.1rem solid var(--mainWhite);
+}
+.nav-active {
+  border-bottom: 0.1rem solid var(--mainYellow);
+}
+.navbar-icon {
+  font-size: 1.6rem;
+}
+.navbar-cart-icon {
+  color: var(--mainBlack);
   position: relative;
 }
-@media screen and (max-width:768px){
-  .header{
-    background: url('../img/headerBcg.jpeg')center/cover fixed no-repeat;
-    /* background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    background-repeat: no-repeat; */
-  }
+.navbar-cart-icon:hover {
+  color: var(--mainGrey);
+}
+.cart-items {
+  color: var(--mainWhite);
+  position: absolute;
+  top: -15%;
+  right: -25%;
+  padding: 0.2rem 0.3rem;
+  background: var(--mainYellow);
+  font-size: 0.1rem;
+  border-radius: 50%;
 }
 /* banner  */
-
-.banner{
-  text-align: center;
-  z-index: 3;
+.banner {
+  min-height: calc(100vh - 101px);
+  background: url("../img/pageBcg/bannerBcg.jpeg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
-.banner__title{
-  font-size: 4rem; 
-
-  text-transform: capitalize;
-  color: var(--brightYellow)
-}
-@media screen and (min-width:768px){
-  .banner__title{
-    font-size: 9rem;
-
-  }
-}
-.banner__social-icon{
-  display: block;
-  text-decoration: none;
-  color: var(--black);
-  border:0.1rem solid var(--black);
-  border-radius: 50%;
-  padding: 0.25rem;
-  transition: all 0.5s linear;
-}
-.banner__social-icon:hover{
-  background: var(--brightYellow);
-  color: var(--black);
-}
-.banner__icons{
-  width: 50%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(4,2rem);
-  grid-column-gap: 0.5rem;
-  justify-content: center;
-}
-/* video */
-.video__container{
-  position: absolute;
-  top:0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-}
-.video__item{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-/* nav Btn */
-.navBtn{
-  position: fixed;
-  top: 5%;
-  right: 5%;
-  font-size: 3.5rem;
-  color: var(--yellow);
-  cursor: pointer;
-  animation-name: pulse;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-/* nav btn animation */
-@keyframes pulse{
-  0%{
-    transform: scale(1)
-  }
-  50%{
-transform: scale(1.5)
-  }
-  100%{
-transform: scale(1)
-  }
-}
-/* nav */
-.nav{
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  /* width: 10rem; */
-  background: rgba(242,180,80,0.9);
-  z-index: 3;
-}
-.nav__links{
-  list-style-type: none;
-}
-.nav__single-link
-{
-  display: block;
-  text-decoration: none;
-  text-transform: capitalize;
-  color: var(--brown);
-  font-size: 1.5rem;
+/* services */
+.service-icon {
+  display: inline-block;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: var(--mainYellow);
+  background: var(--mainGrey);
   padding: 0.5rem 1rem;
-  transition: all 0.5s ease-in-out;
-}
-.nav__single-link:hover{
-  background: var(--brown);
-  color: rgba(242,180,80,0.9);
-  padding-left: 1.5rem;
-}
-.nav__logo:hover{
-  background: var(--grey);
-}
-
-/*  */
-.nav{
-  width: 0;
-  overflow: hidden;
-  transition: all 0.5s linear;
-}
-.nav--show{
-  width: 10rem;
-}
-
-
-
-/* video switch */
-.video__switch-container{
-  display: none;
-}
-@media screen and (min-width:768px){
-  .video__switch-container{
-    display: block;
-    position: absolute;
-    bottom: 5%;
-    right: 5%;
-    z-index: 3;
-  }
-  .video__switch{
-    position: relative;
-    width: 5rem;
-    background: var(--yellow);
-    text-transform: uppercase;
-    display: flex;
-    justify-content: space-between;
-    padding: 0.25rem;
-    cursor: pointer;
-    border-radius: 0.5rem;
-  }
-  .video__switch-btn{
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 50%;
-    background: var(--brown);
-    border-radius: 0.5rem;
-    transition: all 0.3s ease-out;
-  }
-  .btnSlide{
-    left: 50%;
-  }
-}
-/* about  */
-.about-container{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: auto 1fr;
-  grid-gap: 2rem;
-}
-
-.about__img-item{
-  width: 100%;
-  display: block;
-  height: 100%;
-  border-radius: 0.25rem;
-}
-@media screen and (min-width:768px){
-  .about__img-special{
-    order: -1;
-  }
-  .about-container{
-    grid-template-rows: 1fr 1fr;
-  }
-}
-/* drink section */
-.drink{
-  background: var(--brown);
-  color: var(--brightYellow);
-  text-transform: capitalize;
-}
-.drink-form,.drink-card{
-  text-align: center;
-  display: grid;
-  grid-template-columns: 70%;
-  justify-content: center;
-  grid-row-gap: 1.25rem;
-}
-.drink-form__feedback{
-  border:0.1rem solid var(--brightYellow);
-  padding: 0.25rem;
-  display: none;
-}
-.error{
-  display: block;
-  color: red;
-  border-color: red;
-}
-.success{
-  display: block;
-  color: green;
-  border-color: green;
-}
-.drink-form__title,.drink-card__title{
-  font-size: 3rem;
-}
-.input-name,.input-lastname,.input-email{
-  width: 100%;
-}
-.input-name,.input-lastname,.input-email,.input-submit{
-  font-size: 1rem;
-  border-radius: 0.5rem;
-  padding: 0.25rem 0.5rem;
-  background: rgba(111,87,77,0.6);
-  color: var(--darkBrown);
-  border:none;
-  outline: none;
-}
-.input-name::placeholder,.input-lastname::placeholder,.input-email::placeholder{
-  color: var(--darkBrown);
-  text-transform: capitalize;
-}
-.input-submit{
-  background: var(--yellow);
-  color: var(--black);
-  transition: all 0.5s linear;
-  cursor: pointer;
-  text-transform: uppercase;
-}
-.input-submit:hover{
-  opacity: 0.8;
-}
-.drink-card__list{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-row-gap: 2rem;
-}
-.person{
-  display: grid;
-  grid-template-columns: auto auto 1fr;
-  align-items: center;
-  text-align: left;
-  grid-gap: 1rem;
-  border:0.1rem solid rgba(111,87,77,0.6);
-  padding: 1rem;
-  border-radius: 0.5rem;
-  font-size: 1.5rem;
-}
-.person__thumbnail{
   border-radius: 50%;
 }
-@media screen and (min-width:768px){
-  .drink-card__list{
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
-  }
+/* categories */
+.categories-link {
+  color: var(--mainBlack);
+  text-decoration: none;
 }
-/* work section */
-.work-container{
-  max-width: 90vw;
-  margin:2rem auto;
+.categories-link:hover {
+  color: var(--mainGrey);
+  text-decoration: none;
 }
-.work-item__img{
-  width: 100%;
-  height: 100%;
-  display: block;
- transition: all 1s linear;
- opacity: 1;
+.categories-underline {
+  height: 0.1rem;
+  width: 5rem;
+  background: var(--mainYellow);
 }
-
-.work-item{
-  background: linear-gradient(var(--yellow),var(--yellow));
-  overflow: hidden;
+.category-container {
   position: relative;
 }
-.work-item:hover .work-item__img{
-  opacity:0.5; 
-  transform: scale(1.2)
+.category-img {
+  transition: all 1s linear;
 }
-.work-item__icon{
+.category-container:hover .category-img {
+  opacity: 0.5;
+}
+.category-link {
   position: absolute;
-  color: var(--brightYellow);
-  top: 50%;
-  left: 50%;
-  display: inline-block;
-  font-size: 4rem;
-  text-decoration: none;
-  transition: all 0.5s ease;
-  transform: scale(0);
-}
-.work-item:hover .work-item__icon{
-  transform: scale(1.3) translate(-50%,-50%)
-}
-.work-item__icon:hover{
-  color: var(--brown);
-  cursor: pointer;
-}
-@media screen and (min-width:576px){
-  .work-container{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 1rem;
-  }
-}
-@media screen and (min-width:992px){
-.work-container{
-  height: 100vh;
-  grid-template-columns: repeat(4,1fr);
-  grid-template-rows: repeat(4,1fr);
-  grid-template-areas: 
-  "one one two three"
-  "one one four four"
-  "five six seven seven"
-  "eight nine seven seven"
-}
-.item-1{
-  grid-area: one;
-}
-.item-2{
-  grid-area: two;
-}
-.item-3{
-  grid-area: three;
-}
-.item-4{
-  grid-area: four;
-}
-.item-5{
-  grid-area: five;
-}
-.item-6{
-  grid-area: six;
-}
-.item-7{
-  grid-area: seven;
-}
-.item-8{
-  grid-area: eight;
-}
-.item-9{
-  grid-area: nine;
-}
-
-}
-/* modal */
-
-.work-modal{
-  display: none;
-}
-
-.work-modal--show{
-  position: fixed;
-  background: rgba(0,0,0,0.5);
-  top: 0;
-  left: 0;
   bottom: 0;
-  right: 0;
-  z-index: 999;
-  display: grid;
-  justify-content: center;
-  align-items: center;
+  left: 0;
+  padding: 0.2rem 3rem 0.2rem 0.2rem;
+  background: var(--mainWhite);
+  color: var(--mainBlack);
+  clip-path: polygon(0 0, 80% 0, 100% 100%, 0 100%);
+  opacity: 0;
+  transition: all 1s linear;
+  text-decoration: none !important;
 }
-.work-modal__item{
-  background: url('../img/work-1.jpeg')center/cover;
-  height: 70vh;
-  width: 80vw;
-  border:0.5rem solid var(--yellow);
-  border-radius: 0.4rem;
+.category-link:hover {
+  color: var(--mainGrey);
 }
-@media screen and (min-width:768px){
-  .work-modal__item{
-    height: 80vh;
-    width: 60vw;
-  }
+.category-container:hover .category-link {
+  opacity: 1;
 }
-.work-modal__close{
-  position: fixed;
-  font-size: 3rem;
-  color: var(--brightYellow);
-  bottom: 5%;
-  right: 5%;
-  transition: color 0.5s linear;
-  cursor: pointer;
-  text-decoration: none;
-  display: inline-block;
+/* home filler */
+.home-filler {
+  min-height: 60vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../img/home-filler.jpeg") center/cover fixed no-repeat;
 }
-.work-modal__close:hover{
-  color: red;
+.collection-link {
+  color: var(--mainYellow);
+  text-decoration: none !important;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* contact section */
-.contact-container{
-  max-width: 90vw;
+.collection-link:hover {
+  color: var(--mainGrey);
+  text-decoration: none !important;
+}
+.collection-underline {
+  height: 0.1rem;
+  width: 5rem;
+  background: var(--mainYellow);
   margin: 0 auto;
-  display: grid;
-  grid-row-gap: 1rem;
 }
-.contact-info{
-  display: grid;
-  justify-content: center;
+/* featured section */
+.featured-container {
+  background: var(--TransGrey);
+  position: relative;
+  overflow: hidden;
 }
-.contact-item{
-  margin: 1rem 0;
-  padding: 0.5rem;
+.featured-search-icon {
+  background: var(--mainWhite);
+  display: inline-block;
+  padding: 0.2rem 0.4rem;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  font-size: 1.2rem;
+  transform: translateX(110%);
+  transition: all 1s ease-in-out;
+  cursor: pointer;
 }
-.contact-item__icon{
-  font-size: 3rem;
-  color: var(--yellow)
+.featured-container:hover .featured-search-icon {
+  transform: translateX(0%);
 }
-.contact-item__title{
-  text-transform: uppercase;
-  margin: 0.5rem 0;
-  letter-spacing: 0.25rem;
-  font-style: italic;
+.featured-store-link {
+  background: var(--mainYellow);
+  color: var(--mainBlack);
+  padding: 0.2rem 0.4rem;
+  position: absolute;
+  right: 0;
+  top: 70%;
+  transform: translateX(110%);
+  transition: all 1s ease-in-out;
 }
-.contact-item__text{
-  font-size: 1rem;
-  text-transform: uppercase;
-  color: var(--grey);
+.featured-store-link:hover {
+  color: var(--mainBlack);
 }
-@media screen and (min-width:768px){
-  .contact-info{
-    grid-template-columns: repeat(3, 1fr);
-    order:-1;
-  }
+.featured-container:hover .featured-store-link {
+  transform: translateX(0%);
 }
-@media screen and (min-width:992px){
-  .contact-info{
-    grid-template-columns: 1fr;
-    order:0;
-  }
-  .contact-container{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-column-gap: 2rem
-  }
-  .contact-map{
-    align-self: center;
-  }
+
+.old-price {
+  text-decoration: line-through;
 }
+/* partners */
+.partners {
+  background: var(--TransGrey);
+}
+.carousel-control-prev {
+  font-size: 2.5rem;
+  color: var(--mainBlack);
+  transform: translateX(-200%);
+}
+.carousel-control-next {
+  font-size: 2.5rem;
+  color: var(--mainBlack);
+  transform: translateX(200%);
+}
+/* newsletter */
+.form-icon {
+  background: var(--mainGrey);
+  color: var(--mainBlack);
+}
+/* skills */
+.skills {
+  background: var(--mainBlack);
+}
+.skill-icon {
+  color: var(--mainYellow);
+  font-size: 2rem;
+}
+/* footer */
+.footer {
+  background: rgba(0, 0, 0, 0.8);
+}
+.footer-title {
+  border: 0.2rem solid var(--mainYellow);
+  padding: 0.4rem;
+}
+.footer-icon {
+  color: var(--mainYellow);
+}
+.footer-icon:hover {
+  color: var(--mainWhite);
+}
+/* #######################Products############### */
+.products-categories-underline {
+  height: 0.2rem;
+  width: 5rem;
+  background: var(--mainYellow);
+}
+.products-categories-link {
+  color: var(--mainBlack);
+  text-decoration: none !important;
+}
+.products-categories-link:hover {
+  color: var(--mainGrey);
+}
+.products-color {
+  width: 1rem;
+  height: 1rem;
+}
+.products-color-black {
+  background: black;
+}
+.products-color-red {
+  background: red;
+}
+.products-color-blue {
+  background: blue;
+}
+.products-color-green {
+  background: green;
+}
+.products-color-yellow {
+  background: yellow;
+}
+/* ##############END OF PRODUCTS #################### */
+/* ##############SINGLE PRODUCT #################### */
+.single-product-photo {
+  background: var(--TransGrey);
+  opacity: 0.5;
+  transition: all 0.3s linear;
+  cursor: pointer;
+  border: 0.1rem solid transparent;
+  box-sizing: border-box !important;
+}
+.single-product-photo:hover {
+  border-color: var(--mainYellow);
+  opacity: 1;
+}
+.rating-icon {
+  color: var(--mainYellow);
+}
+.product-info-link {
+  color: var(--mainGrey);
+  text-decoration: none !important;
+}
+.product-info-link:hover {
+  color: var(--mainYellow);
+}
+
+/* ##############END OF SINGLE PRODUCT #################### */
